--- a/index.html
+++ b/index.html
@@ -34,6 +34,20 @@
         background-color: #FFFBE6;
         overflow-x: hidden;
       }
+      /* Hide navbar when modal is active */
+      body.modal-active nav {
+        display: none !important;
+      }
+      .custom-scrollbar::-webkit-scrollbar {
+        width: 6px;
+      }
+      .custom-scrollbar::-webkit-scrollbar-track {
+        background: #f1f1f1;
+      }
+      .custom-scrollbar::-webkit-scrollbar-thumb {
+        background: #FACC15;
+        border-radius: 10px;
+      }
     </style>
   <script type="importmap">
 {
